--- a/src/components/settings-popup/settings-popup.html
+++ b/src/components/settings-popup/settings-popup.html
@@ -1,8 +1,7 @@
 <div id="highlight-settings" class="highlight-settings">
     <div class="highlight-settings__header">
         <div class="highlight-settings__about">
-            <div class="highlight-settings__logo">333
-            </div>
+            <div class="highlight-settings__logo"></div>
             <div class="highlight-settings__title">Highlighter</div>
         </div>
 
