--- a/src/components/settings-popup/settings-popup.scss
+++ b/src/components/settings-popup/settings-popup.scss
@@ -1,42 +1,153 @@
 @mixin darkMode() {
-  background: #484d50;
+  background: #1A1D21;
+  //box-shadow: 0 0 25px rgb(132, 220, 245);
+  box-shadow: 0 0 0 4px rgba(132, 220, 245, 0.24);
+  border: .5px solid #82DBF7;
 
   .highlight-settings {
+
     &__header {
-      background: #282C2F;
-      box-shadow: 0 0 2px 0 #000;
+      background: #1A1D21;
+      margin-bottom: 15px;
+      padding: 8px 10px 10px 15px;
+      border-bottom: 1px solid #82DBF7;
+      box-shadow: none;
     }
 
     &__logo {
-      background-image: url("chrome-extension://__MSG_@@extension_id__/assets/images/icons/default-48.png");
+      background-image: url("/public/images/icons/preview.svg");
     }
 
     &__title {
-      color: #f89b36;
+      background: linear-gradient(225deg, #82DBF7 0%, #B6F09C 100%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-size: 18px;
     }
 
     &__form {
-      background: #484d50;
+      background: #1A1D21;
+      padding: 0 20px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
 
     &__line {
-      background: #323639;
-      color: white;
-      box-shadow: 0 0 2px 0 #000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%);
+      border-radius: 5px;
+      margin: 0 0 10px 0;
+      padding: 10px 20px;
       transition: 0.2s;
+      border: .5px solid #9B9C9E;
+      width: 48%;
+      flex-direction: column;
 
       &:hover {
-        background: #3a3e41;
+        box-shadow: 0 0 0 4px rgba(132, 220, 245, 0.24);
+        border: .5px solid #82DBF7;
       }
     }
 
     &__label {
       color: #dcdcdc;
+      margin-bottom: 10px;
+    }
+
+    &__counter {
+      display: flex;
+      align-items: center;
     }
 
     &__field {
       background-color: #404448;
       color: #dcdcdc;
+      width: 30px;
+      height: 30px;
+      user-select: none;
+
+      &--counter {
+        padding-left: 0;
+        text-align: center;
+        appearance: none;
+      }
+
+      &--text {
+        width: 100%;
+        padding: 0 10px;
+      }
+    }
+    &__fields {
+      display: flex;
+      align-items: center;
+    }
+
+    &__counterPlus,
+    &__counterMinus {
+      background-color: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+
+      &:hover {
+        background: url("/public/images/icons/chevron-green.svg");
+        background-size: cover;
+      }
+    }
+
+    &__counterPlus {
+      background: url("/public/images/icons/chevron.svg");
+      rotate: 180deg;
+      background-size: cover;
+      margin-right: 10px;
+    }
+
+    &__counterMinus {
+      background: url("/public/images/icons/chevron.svg");
+      background-size: cover;
+      margin-left: 10px;
+    }
+
+    &__checkbox {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      &:checked + .highlight-settings__checkbox-label:before {
+        background: linear-gradient(225deg, #82DBF7 0%, #B6F09C 100%);
+        border: 1px solid transparent;
+        content: url("/public/images/icons/check.svg");
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    &__checkbox-label {
+      position: relative;
+      color: #CDCECF;
+      margin-right: 35px;
+
+      &:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%);
+        left: 0;
+        border-radius: 4px;
+        border: 1px solid #363A3D;
+        background: #1A1D21;
+        width: 25px;
+        height: 25px;
+      }
     }
   }
 }
@@ -48,7 +159,7 @@
   width: 400px;
   background: rgb(245, 247, 250);
   border-radius: 3px;
-  box-shadow: 0 0 25px rgb(156, 156, 156);
+  //box-shadow: 0 0 25px rgb(156, 156, 156);
   z-index: 99999;
   box-sizing: border-box;
   user-select: none;
@@ -185,14 +296,15 @@
   &__line {
     display: flex;
     justify-content: space-between;
-    background-color: #fff;
-    box-shadow: 0 0 2px 0 #9c9c9c;
+    background-color: linear-gradient(118deg, rgba(215, 237, 237, 0.16) -47.79%, rgba(204, 235, 235, 0.00) 100%);
     margin: 0 8px 10px;
     padding: 5px 10px;
     transition: 0.2s;
+    border: 1px solid #9B9C9E;
 
     &:hover {
-      background-color: #f5f5f5;
+      box-shadow: 0 0 0 4px rgba(132, 220, 245, 0.24);
+      border: 1px solid #82DBF7;
     }
   }
 
@@ -212,11 +324,6 @@
     border: none;
     outline: none;
     color: #0f0f0f;
-
-    &[type="number"],
-    &[type="text"] {
-      padding-left: 5px;
-    }
 
     &--mask-state {
       width: 150px;
