Fixed mask and opacity settings

--- a/src/components/settings-popup/settings-popup.html
+++ b/src/components/settings-popup/settings-popup.html
@@ -32,7 +32,7 @@
             <label class="highlight-settings__label" for="opacityHighlightSettings">Opacity</label>
             <div class="highlight-settings__counter">
                 <button class="highlight-settings__counterPlus" type="button"></button>
-                <input class="highlight-settings__field highlight-settings__field--counter" id="opacityHighlightSettings" type="text" name="size" min="0.01"
+                <input class="highlight-settings__field highlight-settings__field--counter" id="opacityHighlightSettings" type="text" name="opacity" min="0.01"
                    max="1" value="1.0" step="0.1" autocomplete="off">
                 <button class="highlight-settings__counterMinus" type="button"></button>
             </div>
@@ -45,13 +45,13 @@
             </select>
         </div>
         <div class="highlight-settings__line">
-            <label class="highlight-settings__label" for="highlightSettingsUseMask">Mask</label>
+            <label class="highlight-settings__label" for="maskHighlightSettings">Mask</label>
             <div class="highlight-settings__fields">
-                <input class="highlight-settings__checkbox" id="highlightSettingsMask" type="checkbox"
+                <input class="highlight-settings__checkbox" id="useMaskHighlightSettings" type="checkbox"
                        name="useMask" autocomplete="off">
-                <label class="highlight-settings__checkbox-label" for="highlightSettingsMask"></label>
+                <label class="highlight-settings__checkbox-label" for="useMaskHighlightSettings"></label>
                 <input class="highlight-settings__field highlight-settings__field--text highlight-settings__field--mask-state"
-                       id="highlightSettingsUseMask" type="text" name="mask" autocomplete="off">
+                       id="maskHighlightSettings" type="text" name="mask" autocomplete="off">
             </div>
         </div>
     </form>
